svc-brickabode-ci.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-brickabode-ci
spec:
  type: ClusterIP
  ports:
    - port: 80 
      targetPort: 5000
  selector:
    app: brickabode-ci
