brickabode-ci-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: brickabode-ci-ingress
spec:
  rules:
    - host: brickabode-ci.net
      http:
        paths:
          - path: /
            backend:
              serviceName: svc-brickabode-ci
              servicePort: 80
